# ESG_DATA_PLATFORM

./: .gitignore  README.md
CrawlESG/: INTERFACE.md  README.md
CrawlESG/docs/: MANUAL.docx  MANUAL.md  RUNBOOK.md
CrawlESG/index/: gb_coverage_by_year_type.csv  gb_filings_primary.csv  (+1 more)
ExtractESG/: .env.example  .gitignore  CONSTRUCTION_PROGRESS.md  README.md  pyproject.toml
ExtractESG/docs/: ARCHITECTURE.md  QINIU_MODEL_STRATEGY.md
ExtractESG/src/extract_esg/: __init__.py  cli.py  config.py
ExtractESG/src/extract_esg/ai/: __init__.py  model_assessment.py  model_router.py  qiniu_adapter.py  qiniu_registry.py
ExtractESG/src/extract_esg/benchmark/: __init__.py  cloud_model_harness.py
ExtractESG/src/extract_esg/contracts/: __init__.py  base.py  cloud.py  document.py  evidence.py  extraction.py
ExtractESG/src/extract_esg/document/cloud_tasks/: __init__.py  builders.py
ExtractESG/src/extract_esg/document/fusion/: __init__.py  local_cloud.py
ExtractESG/src/extract_esg/document/local_pdf/: __init__.py  processor.py
ExtractESG/src/extract_esg/document/packets/: __init__.py  builder.py
ExtractESG/src/extract_esg/extraction/: __init__.py  cloud_structured.py  full_harvest.py  targeted_recall.py
ExtractESG/src/extract_esg/persistence/: __init__.py  sqlite_store.py
ExtractESG/src/extract_esg/validation/: __init__.py  verifier.py
ExtractESG/src/extract_esg/web/: __init__.py  app.py
ExtractESG/src/extract_esg/workflows/: __init__.py  report_processing.py
ExtractESG/tests/: test_contracts_and_workflow.py  test_persistence_and_routing.py
(+5 files in other folders)
